--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
   "homepage": "https://github.com/AWoelfel/roboCodeSetup",
   "devDependencies": {
     "gulp": "^3.9.0",
+    "gulp-clean": "^0.3.1",
+    "gulp-download": "0.0.1",
+    "gulp-insert": "^0.5.0",
+    "gulp-slash": "^1.1.3",
+    "gulp-unzip": "^0.1.3",
     "gulp-util": "^3.0.6"
   }
 }
